// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Portal/TopAlertBar Default smoke-test 1`] = `
<div class="o-top-bar-alert">
  <span>
    Qui voluptate nostrud nostrud ex consequat velit in ea aliqua officia consectetur. Velit amet dolore sed ea consectetur deserunt occaecat culpa enim magna ad et do officia. Veniam quis ex consequat fugiat deserunt in commodo nisi eiusmod enim velit cillum tempor occaecat lorem deserunt mollit id adipiscing.
  </span>
  <a href="https://www.teladochealth.com"
     target="_blank"
     rel="noopener noreferrer"
  >
    Link
  </a>
</div>
`;

exports[`components/Portal/TopAlertBar WithStrongText smoke-test 1`] = `
<div class="o-top-bar-alert">
  <strong>
    Strong text
  </strong>
  <span>
    Qui voluptate nostrud nostrud ex consequat velit in ea aliqua officia consectetur. Velit amet dolore sed ea consectetur deserunt occaecat culpa enim magna ad et do officia. Veniam quis ex consequat fugiat deserunt in commodo nisi eiusmod enim velit cillum tempor occaecat lorem deserunt mollit id adipiscing.
  </span>
  <a href="https://www.teladochealth.com"
     target="_blank"
     rel="noopener noreferrer"
  >
    Link
  </a>
</div>
`;
